--- a/DSA in python/Queue_with_LL.ipynb
+++ b/DSA in python/Queue_with_LL.ipynb
@@ -19,7 +19,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Jalaludin17/Python-for-Data-Science-and-AI/blob/main/DSA%20in%20python/Queue_with_LL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Jalaludin17/Python-for-Data-Science-and-AI/blob/main/DSA%20in%20python/05 Queue_with_LL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
